// Copyright 2020 The Alexandria Foundation
//
// Licensed under the GNU Affero General Public License, Version 3.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.gnu.org/licenses/agpl-3.0.en.html
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package proto;

option go_package = ".;proto";

service Identity {
  rpc Get(GetRequest) returns (User);
  rpc GetByID(GetByIDRequest) returns (User);
  rpc List(ListRequest) returns (ListResponse);
  rpc Enable(CommandRequest) returns (Empty);
  rpc Disable(CommandRequest) returns (Empty);
  rpc Remove(CommandRequest) returns (Empty);
}

message GetRequest {
  string username = 1;
}

message GetByIDRequest {
  string id = 1;
}

message ListRequest {
  string token = 1;
  int64 limit = 2;
  string orderBy = 3;
  map<string, string> filter = 4;
}

message CommandRequest {
  string username = 1;
}

message Empty {}

message User {
  string id = 1;
  string username = 2;
  string preferredUsername = 3;
  string email = 4;
  string name = 5;
  string middleName = 6;
  string familyName = 7;
  string locale = 8;
  string picture = 9;
  string status = 10;
  string createTime = 11;
  string updateTime = 12;
  bool enabled = 13;
}

message ListResponse {
  repeated User users = 1;
  string nextPageToken = 2;
}
